--- a/src/app/pages/fg-check/fg-check.component.html
+++ b/src/app/pages/fg-check/fg-check.component.html
@@ -92,6 +92,11 @@
           </button>
         </div>
         
+        <button class="custom-btn" (click)="openChangeShipmentDialog()" *ngIf="!isScanning">
+          <i class="material-icons">swap_horiz</i>
+          Đổi số shipment
+        </button>
+        
         <div class="dropdown">
           <button class="custom-btn dropdown-toggle" type="button" data-bs-toggle="dropdown">
             <i class="material-icons">more_vert</i>
@@ -168,7 +173,7 @@
           <tr *ngFor="let item of filteredItems; let i = index">
             <td>{{item.shipment || ''}}</td>
             <td class="row-header">{{i + 1}}</td>
-            <td class="code-cell">{{item.materialCode}}</td>
+            <td class="code-cell" [class.duplicate-material]="isDuplicateMaterialCode(item)">{{item.materialCode}}</td>
             <td class="code-cell" [class.scanned-cell]="item.scannedCustomerCode">{{item.customerCode}}</td>
             <td class="number-cell">{{formatNumber(item.carton)}}</td>
             <td class="number-cell" [class.scanned-cell]="item.scannedQuantity">{{formatNumber(item.quantity)}}</td>
@@ -277,6 +282,56 @@
       <button type="button" class="btn btn-cancel" (click)="closeCheck()">
         <i class="material-icons">close</i>
         Đóng
+      </button>
+    </div>
+  </div>
+</div>
+
+<!-- Dialog Đổi số shipment -->
+<div class="modal-overlay" 
+     *ngIf="showChangeShipmentDialog" 
+     (click)="closeChangeShipmentDialog()">
+  <div class="modal-container" (click)="$event.stopPropagation()">
+    <div class="modal-header">
+      <h3 class="modal-title">
+        <i class="material-icons">swap_horiz</i>
+        Đổi số shipment
+      </h3>
+      <button class="close-btn" (click)="closeChangeShipmentDialog()">
+        <i class="material-icons">close</i>
+      </button>
+    </div>
+    
+    <div class="modal-body">
+      <div class="form-group">
+        <label class="form-label">Số shipment hiện tại (đã được check):</label>
+        <input type="text" 
+               class="form-input" 
+               [(ngModel)]="oldShipmentCode"
+               placeholder="Nhập số shipment cũ..."
+               (keyup.enter)="newShipmentCode && changeShipmentCode()"
+               style="text-transform: uppercase;">
+      </div>
+      
+      <div class="form-group">
+        <label class="form-label">Số shipment mới:</label>
+        <input type="text" 
+               class="form-input" 
+               [(ngModel)]="newShipmentCode"
+               placeholder="Nhập số shipment mới..."
+               (keyup.enter)="oldShipmentCode && changeShipmentCode()"
+               style="text-transform: uppercase;">
+      </div>
+    </div>
+    
+    <div class="modal-footer">
+      <button class="btn btn-cancel" (click)="closeChangeShipmentDialog()">
+        <i class="material-icons">close</i>
+        Hủy
+      </button>
+      <button class="btn btn-apply" (click)="changeShipmentCode()" [disabled]="!oldShipmentCode || !newShipmentCode">
+        <i class="material-icons">check</i>
+        Done
       </button>
     </div>
   </div>
