--- a/src/app/pages/shipment/shipment.component.html
+++ b/src/app/pages/shipment/shipment.component.html
@@ -252,8 +252,10 @@
               <input type="text"
                      class="editable-input"
                      [(ngModel)]="shipment.vehicleNumber"
-                     (change)="updateShipmentInFirebase(shipment)"
-                     placeholder="Biển số xe">
+                     (change)="onVehicleNumberChange(shipment)"
+                     (input)="shipment.vehicleNumber = $event.target.value.toUpperCase()"
+                     placeholder="Biển số xe"
+                     style="text-transform: uppercase;">
             </td>
             
             <!-- Nhà máy -->
@@ -336,7 +338,9 @@
               <span class="inventory-display">{{formatNumber(getInventory(shipment.materialCode))}}</span>
             </td>
             <td>
-              <select class="editable-select" [(ngModel)]="shipment.shipMethod" (change)="updateShipmentInFirebase(shipment)">
+              <select class="editable-select"
+                      [(ngModel)]="shipment.shipMethod"
+                      (change)="onFWDChange(shipment)">
                 <option value="">Chọn FWD</option>
                 <option value="Sea">Sea</option>
                 <option value="Air">Air</option>
@@ -344,7 +348,9 @@
               </select>
             </td>
             <td>
-              <select class="editable-select" [(ngModel)]="shipment.packing" (change)="updateShipmentInFirebase(shipment)">
+              <select class="editable-select"
+                      [(ngModel)]="shipment.packing"
+                      (change)="updateShipmentInFirebase(shipment)">
                 <option value="Pallet">Pallet</option>
                 <option value="Box">Box</option>
               </select>
@@ -357,7 +363,9 @@
                      placeholder="Qty Pallet">
             </td>
             <td class="status-cell">
-              <select class="status-select" [(ngModel)]="shipment.status" (change)="onStatusChange(shipment)">
+              <select class="status-select"
+                      [(ngModel)]="shipment.status"
+                      (change)="onStatusChange(shipment)">
                 <option value="Chờ soạn">Chờ soạn</option>
                 <option value="Đang soạn">Đang soạn</option>
                 <option value="Đã xong">Đã xong</option>
@@ -370,7 +378,7 @@
             <td>
               <select class="editable-select" 
                       [(ngModel)]="shipment.document" 
-                      (change)="updateShipmentInFirebase(shipment)">
+                      (change)="onDocumentChange(shipment)">
                 <option value="Đã có PX">Đã có PX</option>
                 <option value="Full">Full</option>
                 <option value="Thiếu">Thiếu</option>
@@ -382,7 +390,7 @@
               <input type="date"
                      class="editable-input date-input"
                      [ngModel]="formatDateForInput(shipment.requestDate)"
-                     (ngModelChange)="updateDateField(shipment, 'requestDate', $event)"
+                     (ngModelChange)="onCSDateChange(shipment, $event)"
                      (click)="$event.target.showPicker()"
                      title="Click để chọn ngày CS Date">
             </td>
@@ -398,7 +406,7 @@
               <input type="date"
                      class="editable-input date-input"
                      [ngModel]="formatDateForInput(shipment.actualShipDate)"
-                     (ngModelChange)="updateDateField(shipment, 'actualShipDate', $event)"
+                     (ngModelChange)="onDispatchDateChange(shipment, $event)"
                      (click)="$event.target.showPicker()"
                      title="Click để chọn ngày Dispatch Date">
             </td>
